--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,7 @@ button:focus {
 }
 
 .header-text {
-    opacity: 0;
+    opacity: 1;
     padding-top: 40vh;
     animation-delay: 2.8s;
     animation-name: fade-in;
@@ -133,7 +133,7 @@ button:focus {
 
 .ui.header.headertext h1 {
     color: white;
-    font-size: 80px;
+    font-size: 3rem;
     font-family: le-monde-livre-classic-byol, serif;
     font-weight: 600;
     text-align: center;
