--- a/assets/style.css
+++ b/assets/style.css
@@ -176,10 +176,10 @@ button:focus {
 
 }
 .ui.header.headertext h1:hover{
-    text-shadow: 
+    /* text-shadow: 
         0 0 5px #ffffff, 
         0 0 10px #ab8eeb, 
-        0 0 10px #ab8eeb;
+        0 0 10px #ab8eeb; */
     animation: hover-float 3s infinite ease-in-out, glow-pulse 2s infinite ease-in-out;
 }
 
@@ -208,6 +208,23 @@ button:focus {
     height: 60vw;
 }
 
+canvas {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+  
+.content {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: white;
+    margin-top: 20vh;
+}
+
 /*ADDED  RN*/
 
 
@@ -220,17 +237,17 @@ h1, h2, h3, a, p, span {
 
 a {
     text-decoration: none;
-    text-shadow: 
-        0 0 1px #ffffff, 
-        0 0 1px #ab8eeb;
-}
+    /* text-shadow: 
+        /* 0 0 1px #ffffff, 
+        0 0 1px #ab8eeb;*/ 
+} 
 
 a:hover {
     /* color: var(--highlight-color); */
     text-shadow: 
         0 0 1.5px #ffffff, 
-        0 0 3px #ab8eeb;
-}
+        /* 0 0 3px #ab8eeb; */
+} 
 
 nav {
     display: flex;
