--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -3,20 +3,22 @@ nav {
     width: 100%;
     border-bottom: 1px solid white;
     position: -webkit-sticky; /* For Safari */
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 1000;
     backdrop-filter: blur(10px); /* Blurs the content behind */
     transition: background-color 0.3s ease-in-out;
+    font-size: 1em;
 }
 
 nav .nav-section {
-    padding: 0.6rem 2.5rem;
+    padding: 5px 20px;
     display: flex;
     gap: 1rem;
     border-left: 1px solid white;
     align-items: center;
     justify-content: center;
+    width: 100%; /* Or a specific width if necessary */
 }
 
 #nav-mobile-section {
@@ -70,7 +72,7 @@ nav .nav-section {
 
 #nav-link-section {
     flex-basis: 50%;
-    gap: 6rem; 
+    gap: 50px; 
 }
 
 #nav-social-section {
