--- a/schneider.css
+++ b/schneider.css
@@ -15,7 +15,7 @@
     --second-bg-color: #343033;
     --text-color: #ffffff;
     --main-color: #99c7be;*/
-    --bg-color: #000000;
+    --bg-color: #101010;
     --second-bg-color: #FFFFFF;
     --text-color: #ffffff;
     --main-color: #d87d62;
@@ -108,6 +108,15 @@ span{
     color: var(--main-color);
 }
 
+
+.project-overview {
+    font-size: 14px;
+    line-height: 150%;
+    font-weight: 200;
+    color: #e7e7e7; /* Use your preferred color */
+    margin: 0;
+  }
+  
 .home-content h1{
     font-size:10rem;
     font-weight: 700;
@@ -898,7 +907,7 @@ pre.w-code-block code {
     display: inline-block !important
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -906,7 +915,7 @@ h5,
 h6 {
     margin-bottom: 10px;
     font-weight: 500
-}
+} */
 
 h1 {
     margin-top: 20px;
@@ -920,11 +929,6 @@ h1 {
     line-height: 36px
 } */
 
-h3 {
-    margin-top: 20px;
-    font-size: 25px;
-    line-height: 30px;
-}
 
 h4 {
     margin-top: 10px;
@@ -944,12 +948,12 @@ h6 {
     line-height: 18px
 }
 
-p {
+/* p {
     margin-top: 0;
     color: #333;
     margin-bottom: 10px;
     line-height: 150%;
-}
+} */
 
 blockquote {
     border-left: 5px solid #e2e2e2;
@@ -2468,7 +2472,7 @@ textarea.w-select {
     display: grid
 }
 
-:root {
+/* :root {
     --gray-1: #ffffff;
     --gray-2: #ffffff;
     --gray-3: #ffffff;
@@ -2492,7 +2496,7 @@ textarea.w-select {
     --untitled-ui-gray600: #ffffff;
     --untitled-ui-gray900: #ffffff;
     --untitled-ui-primary800: #53389e
-}
+} */
 
 .w-layout-layout {
     grid-row-gap: 20px;
@@ -3122,6 +3126,15 @@ figcaption {
     font-weight: 400
 }
 
+.next-project-title{
+    font-family: 'europa', sans-serif;
+    font-size: 14px;
+    line-height: 150%;
+    color: whitesmoke;
+    font-weight: 300
+}
+
+
 .caption.text-link {
     color: var(--gray-1);
     text-decoration: underline
@@ -3142,8 +3155,9 @@ figcaption {
 
 .heading-m {
     margin-bottom: 12px;
-    font-family: Cabinet Grotesk Variable, sans-serif;
-    font-size: 1.5rem;
+    font-family: le-monde-livre-classic-byol, serif;
+    font-size: 22px;
+    color: white;
     line-height: 140%
 }
 
@@ -3470,17 +3484,31 @@ figcaption {
 }
 
 .styled-rich-text h1 {
+    color: white;
     margin-top: 40px
 }
 
 .styled-rich-text h2 {
-    margin-top: 20px
+    color: white;
+    line-height: 150%;
+    margin-bottom: 10px;
+    font-size: 22px;
+
 }
 
+.styled-rich-text h3 {
+    color: white;
+    line-height: 150%;
+    margin-bottom: 10px;
+    font-size: 20px;
+
+}
+
+
 .styled-rich-text p {
-    color: rgb(160, 160, 160);
-    font-size: 1.5rem;
-    line-height: 170%;
+    color: #f2f2f299;
+    font-size: 16px;
+    line-height: 150%;
     font-weight: 100;
 }
 
@@ -3489,9 +3517,10 @@ figcaption {
 }
 
 .styled-rich-text li {
-    margin-bottom: 12px;
-    font-size: 1.6rem;
-    color: #ffffff;
+    line-height: 150%;
+    font-weight: 100;
+    font-size: 16px;
+    color: #ffffffc1;
 }
 
 .styled-rich-text img {
@@ -3938,7 +3967,7 @@ figcaption {
     background-image: linear-gradient(90deg, #a5a8ff, #ff785d 50%, #e69cff);
     -webkit-background-clip: text;
     background-clip: text;
-    font-family: Cabinet Grotesk Variable, sans-serif;
+    font-family: le-monde-livre-classic-byol, serif;
     font-size: 7rem;
     font-weight: 600;
     line-height: 7rem
@@ -3952,9 +3981,10 @@ figcaption {
 }
 
 .section-heading {
+    color: #fff;
     text-align: left;
     margin-bottom: 8px;
-    font-family: Cabinet Grotesk Variable, sans-serif;
+    font-family: le-monde-livre-classic-byol, serif;
     font-size: 2.5rem;
     line-height: 140%
 }
@@ -4343,7 +4373,7 @@ figcaption {
     grid-column-gap: 32px;
     grid-template-rows: auto;
     grid-template-columns: 1fr 1fr;
-    margin-top: 44px
+    margin-top: 22px
 }
 
 .cancel-button {
@@ -5029,7 +5059,7 @@ blockquote::after {
 }
 
 .card-expertise-light {
-    background-color: #ab8eeb94;
+    background-color: #ab8eeb50;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     border: 1px solid #e0e0e0;
