--- a/style3.css
+++ b/style3.css
@@ -14,7 +14,8 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'europa', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
+    
 }
 
 :host, :root {
@@ -50,12 +51,12 @@ section{
     padding: 10rem 9% 2rem;
 }
 
-h1, h2, h3, a, p, span {
+/* h1, h2, h3, a, p, span {
     font-family: "Rubik", sans-serif;
     font-weight: 400;
     color: white;
     margin: 0px;
-}
+} */
 
 
 nav {
@@ -73,6 +74,7 @@ nav {
 nav .nav-section {
     padding: 5px 20px;
     display: flex;
+    color: white;
     gap: 1rem;
     border-left: 1px solid rgba(255, 255, 255, 0.3);
     align-items: center;
