--- a/upshift.css
+++ b/upshift.css
@@ -3113,7 +3113,7 @@ figcaption {
 }
 
 .caption {
-    color: #C5050C;
+    color: #2ac178;
     font-size: 1.125rem;
 }
 
@@ -3504,14 +3504,12 @@ figcaption {
 }
 
 .styled-rich-text h3 {
-    color: #f2f2f2;
+    color: white;
     line-height: 125%;
     font-family: Neue Montreal, sans-serif;
     /* margin-bottom: 10px; */
     font-size: 25px;
     font-weight: 300;
-    letter-spacing: -.1px;
-    text-shadow: none;
 
 }
 
